--- a/Retail_Casestudy.ipynb
+++ b/Retail_Casestudy.ipynb
@@ -547,46 +547,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4153,
-   "id": "720d906d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 93937 entries, 0 to 93936\n",
-      "Data columns (total 16 columns):\n",
-      " #   Column                 Non-Null Count  Dtype         \n",
-      "---  ------                 --------------  -----         \n",
-      " 0   RECEIPT_METHOD         93937 non-null  object        \n",
-      " 1   CUSTOMER_NAME          93937 non-null  object        \n",
-      " 2   CUSTOMER_NUMBER        93937 non-null  int64         \n",
-      " 3   RECEIPT_DOC_NO         93908 non-null  float64       \n",
-      " 4   RECEIPT_DATE           93937 non-null  datetime64[ns]\n",
-      " 5   CLASS                  93937 non-null  object        \n",
-      " 6   CURRENCY_CODE          93937 non-null  object        \n",
-      " 7   Local Amount           93937 non-null  float64       \n",
-      " 8   USD Amount             93937 non-null  float64       \n",
-      " 9   INVOICE_ALLOCATED      93937 non-null  object        \n",
-      " 10  INVOICE_CREATION_DATE  93937 non-null  datetime64[ns]\n",
-      " 11  DUE_DATE               93937 non-null  datetime64[ns]\n",
-      " 12  PAYMENT_TERM           93937 non-null  object        \n",
-      " 13  INVOICE_CLASS          93937 non-null  object        \n",
-      " 14  INVOICE_CURRENCY_CODE  93937 non-null  object        \n",
-      " 15  INVOICE_TYPE           93937 non-null  object        \n",
-      "dtypes: datetime64[ns](3), float64(3), int64(1), object(9)\n",
-      "memory usage: 11.5+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df1.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4154,
    "id": "0e4f82d4",
    "metadata": {},
@@ -597,60 +557,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "75c804cd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4155,
    "id": "745c0446",
    "metadata": {},
    "outputs": [],
    "source": [
     "df1['CUSTOMER_NUMBER']= df1['CUSTOMER_NUMBER'].astype('object')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4156,
-   "id": "1d48590b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 93937 entries, 0 to 93936\n",
-      "Data columns (total 16 columns):\n",
-      " #   Column                 Non-Null Count  Dtype         \n",
-      "---  ------                 --------------  -----         \n",
-      " 0   RECEIPT_METHOD         93937 non-null  object        \n",
-      " 1   CUSTOMER_NAME          93937 non-null  object        \n",
-      " 2   CUSTOMER_NUMBER        93937 non-null  object        \n",
-      " 3   RECEIPT_DOC_NO         93908 non-null  float64       \n",
-      " 4   RECEIPT_DATE           93937 non-null  datetime64[ns]\n",
-      " 5   CLASS                  93937 non-null  object        \n",
-      " 6   CURRENCY_CODE          93937 non-null  object        \n",
-      " 7   Local Amount           93937 non-null  float64       \n",
-      " 8   USD Amount             93937 non-null  float64       \n",
-      " 9   INVOICE_ALLOCATED      93937 non-null  object        \n",
-      " 10  INVOICE_CREATION_DATE  93937 non-null  datetime64[ns]\n",
-      " 11  DUE_DATE               93937 non-null  datetime64[ns]\n",
-      " 12  PAYMENT_TERM           93937 non-null  object        \n",
-      " 13  INVOICE_CLASS          93937 non-null  object        \n",
-      " 14  INVOICE_CURRENCY_CODE  93937 non-null  object        \n",
-      " 15  INVOICE_TYPE           93937 non-null  object        \n",
-      "dtypes: datetime64[ns](3), float64(3), object(10)\n",
-      "memory usage: 11.5+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df1.info()"
    ]
   },
   {
@@ -665,36 +577,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d5440586",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "raw",
+   "id": "b058b98a",
+   "metadata": {},
+   "source": [
+    "Creating a copy of df1 "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4158,
    "id": "d0b80ca6",
    "metadata": {},
    "outputs": [],
    "source": [
     "data=df1.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4159,
-   "id": "80113692",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['RECEIPT_METHOD', 'CUSTOMER_NAME', 'CUSTOMER_NUMBER', 'CLASS',\n",
-       "       'CURRENCY_CODE', 'INVOICE_ALLOCATED', 'PAYMENT_TERM', 'INVOICE_CLASS',\n",
-       "       'INVOICE_CURRENCY_CODE', 'INVOICE_TYPE'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 4159,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Cat_cols"
    ]
   },
   {
@@ -864,32 +768,6 @@
    "outputs": [],
    "source": [
     "data.drop('CLASS',axis=1,inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4164,
-   "id": "e99f5780",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['RECEIPT_METHOD', 'CUSTOMER_NAME', 'CUSTOMER_NUMBER', 'RECEIPT_DOC_NO',\n",
-       "       'RECEIPT_DATE', 'CURRENCY_CODE', 'Local Amount', 'USD Amount',\n",
-       "       'INVOICE_ALLOCATED', 'INVOICE_CREATION_DATE', 'DUE_DATE',\n",
-       "       'PAYMENT_TERM', 'INVOICE_CLASS', 'INVOICE_CURRENCY_CODE',\n",
-       "       'INVOICE_TYPE'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 4164,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.columns"
    ]
   },
   {
@@ -10597,68 +10475,6 @@
    ],
    "source": [
     "pred_data.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4546,
-   "id": "7f247514",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Customer Type</th>\n",
-       "      <th>Customer_Name</th>\n",
-       "      <th>Customer Account No</th>\n",
-       "      <th>Transaction Number</th>\n",
-       "      <th>Local Amount</th>\n",
-       "      <th>AGE</th>\n",
-       "      <th>USD Amount</th>\n",
-       "      <th>PAYMENT_TERM_DAYS</th>\n",
-       "      <th>INVOICE_CLASS</th>\n",
-       "      <th>INVOICE_CURRENCY_CODE</th>\n",
-       "      <th>CUSTOMER_NAME</th>\n",
-       "      <th>CUSTOMER_NUMBER</th>\n",
-       "      <th>cluster_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Customer Type, Customer_Name, Customer Account No, Transaction Number, Local Amount, AGE, USD Amount, PAYMENT_TERM_DAYS, INVOICE_CLASS, INVOICE_CURRENCY_CODE, CUSTOMER_NAME, CUSTOMER_NUMBER, cluster_id]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 4546,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pred_data[pred_data['CUSTOMER_NUMBER']=='10100']"
    ]
   },
   {
